tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__prelude__test__panic_emit@pre-mem2reg@llvm14_0.snap
---
source: tket-qsystem/src/llvm/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@e_PANIC.DF25FD88.0 = private constant [15 x i8] c"\0EEXIT:INT:PANIC"

define { i64, i64 } @_hl.main.1(i64 %0, i64 %1) {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca i64, align 8
  %"5_0" = alloca { i32, i8* }, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"6_0" = alloca i64, align 8
  %"6_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, i8* } { i32 42, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @e_PANIC.DF25FD88.0, i32 0, i32 0) }, { i32, i8* }* %"5_0", align 8
  store i64 %0, i64* %"2_0", align 4
  store i64 %1, i64* %"2_1", align 4
  %"5_01" = load { i32, i8* }, { i32, i8* }* %"5_0", align 8
  %"2_02" = load i64, i64* %"2_0", align 4
  %"2_13" = load i64, i64* %"2_1", align 4
  %2 = extractvalue { i32, i8* } %"5_01", 0
  %shift_code = add i32 %2, 1000
  %3 = extractvalue { i32, i8* } %"5_01", 1
  call void @panic(i32 %shift_code, i8* %3)
  store i64 0, i64* %"6_0", align 4
  store i64 0, i64* %"6_1", align 4
  %"6_04" = load i64, i64* %"6_0", align 4
  %"6_15" = load i64, i64* %"6_1", align 4
  store i64 %"6_04", i64* %"0", align 4
  store i64 %"6_15", i64* %"1", align 4
  %"06" = load i64, i64* %"0", align 4
  %"17" = load i64, i64* %"1", align 4
  %mrv = insertvalue { i64, i64 } undef, i64 %"06", 0
  %mrv8 = insertvalue { i64, i64 } %mrv, i64 %"17", 1
  ret { i64, i64 } %mrv8
}

; Function Attrs: noreturn
declare void @panic(i32, i8*) #0

attributes #0 = { noreturn }
